Loop cut Ctrl+r ---> crash #118524

Closed
opened 2024-02-20 17:38:41 +01:00 by Nicola Narracci · 5 comments

System Information
Operating system: Linux-6.7.0-arch3-1-x86_64-with-glibc2.39 64 Bits, X11 UI
Graphics card: Mesa Intel(R) HD Graphics 5500 (BDW GT2) Intel 4.6 (Core Profile) Mesa 24.0.1-arch1.1

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-19 16:19, hash: 1ee414feb025
Worked: (newest version of Blender that worked as expected)

Short description of error
Loop cut Ctrl+r ---> crash

Exact steps for others to reproduce the error
Open a new file, go to Edit mode, move the scene to zoom in, press Ctrl+r and the program close itselfe, not all the time, but 2 times out of 3.

**System Information** Operating system: Linux-6.7.0-arch3-1-x86_64-with-glibc2.39 64 Bits, X11 UI Graphics card: Mesa Intel(R) HD Graphics 5500 (BDW GT2) Intel 4.6 (Core Profile) Mesa 24.0.1-arch1.1 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-19 16:19, hash: `1ee414feb025` Worked: (newest version of Blender that worked as expected) **Short description of error** Loop cut Ctrl+r ---> crash **Exact steps for others to reproduce the error** Open a new file, go to Edit mode, move the scene to zoom in, press Ctrl+r and the program close itselfe, not all the time, but 2 times out of 3.
Nicola Narracci added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-02-20 17:38:42 +01:00

Yep, same here...

Yep, same here...

Bisecting, commit 1c0f374ec3 was identified as the one causing the crash. However, upon closer examination, it is not clear why the loop cut code would lead to a crash.

 	blender.exe!Object::object_to_world() Line 5364	C++
>	blender.exe!ringsel_draw(const bContext * __formal, ARegion * __formal, void * arg) Line 91	C++
 	blender.exe!ed_region_draw_cb_draw(const bContext * C, ARegion * region, ARegionType * art, int type) Line 264	C++
 	blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 272	C++
 	blender.exe!DRW_draw_callbacks_post_scene() Line 1487	C++
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1768	C++
 	blender.exe!DRW_draw_view(const bContext * C) Line 1628	C++
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1570	C++
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1606	C++
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 533	C++
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1005	C++
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1174	C++
 	blender.exe!wm_draw_update(bContext * C) Line 1570	C++
 	blender.exe!WM_main(bContext * C) Line 627	C++
 	blender.exe!main(int argc, const char * * __formal) Line 577	C++
 	[External Code]	

@HooglyBoogly ^

Bisecting, commit 1c0f374ec3 was identified as the one causing the crash. However, upon closer examination, it is not clear why the loop cut code would lead to a crash. ``` blender.exe!Object::object_to_world() Line 5364 C++ > blender.exe!ringsel_draw(const bContext * __formal, ARegion * __formal, void * arg) Line 91 C++ blender.exe!ed_region_draw_cb_draw(const bContext * C, ARegion * region, ARegionType * art, int type) Line 264 C++ blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 272 C++ blender.exe!DRW_draw_callbacks_post_scene() Line 1487 C++ blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1768 C++ blender.exe!DRW_draw_view(const bContext * C) Line 1628 C++ blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1570 C++ blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1606 C++ blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 533 C++ blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1005 C++ blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1174 C++ blender.exe!wm_draw_update(bContext * C) Line 1570 C++ blender.exe!WM_main(bContext * C) Line 627 C++ blender.exe!main(int argc, const char * * __formal) Line 577 C++ [External Code] ``` @HooglyBoogly ^
Member

Got a fix, will post shortly

Got a fix, will post shortly
Philipp Oeser self-assigned this 2024-02-21 09:42:14 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-21 12:39:32 +01:00

Bisecting, commit 1c0f374ec3 was identified as the one causing the crash. However, upon closer examination, it is not clear why the loop cut code would lead to a crash.

 	blender.exe!Object::object_to_world() Line 5364	C++
>	blender.exe!ringsel_draw(const bContext * __formal, ARegion * __formal, void * arg) Line 91	C++
 	blender.exe!ed_region_draw_cb_draw(const bContext * C, ARegion * region, ARegionType * art, int type) Line 264	C++
 	blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 272	C++
 	blender.exe!DRW_draw_callbacks_post_scene() Line 1487	C++
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1768	C++
 	blender.exe!DRW_draw_view(const bContext * C) Line 1628	C++
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1570	C++
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1606	C++
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 533	C++
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1005	C++
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1174	C++
 	blender.exe!wm_draw_update(bContext * C) Line 1570	C++
 	blender.exe!WM_main(bContext * C) Line 627	C++
 	blender.exe!main(int argc, const char * * __formal) Line 577	C++
 	[External Code]	

@HooglyBoogly ^

Ciao Germano, mi piacerebbe aiutare di piu' blender, sono un programmatore ma mi trovo molto disorientato con il codice di blender, avrei bisogno di qualche tutorial per capire le basi e piano piano fare qualcosa di utile, mi potresti aiutare?

> Bisecting, commit 1c0f374ec3 was identified as the one causing the crash. However, upon closer examination, it is not clear why the loop cut code would lead to a crash. > > ``` > blender.exe!Object::object_to_world() Line 5364 C++ > > blender.exe!ringsel_draw(const bContext * __formal, ARegion * __formal, void * arg) Line 91 C++ > blender.exe!ed_region_draw_cb_draw(const bContext * C, ARegion * region, ARegionType * art, int type) Line 264 C++ > blender.exe!ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 272 C++ > blender.exe!DRW_draw_callbacks_post_scene() Line 1487 C++ > blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1768 C++ > blender.exe!DRW_draw_view(const bContext * C) Line 1628 C++ > blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1570 C++ > blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1606 C++ > blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 533 C++ > blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 1005 C++ > blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1174 C++ > blender.exe!wm_draw_update(bContext * C) Line 1570 C++ > blender.exe!WM_main(bContext * C) Line 627 C++ > blender.exe!main(int argc, const char * * __formal) Line 577 C++ > [External Code] > > ``` > > @HooglyBoogly ^ Ciao Germano, mi piacerebbe aiutare di piu' blender, sono un programmatore ma mi trovo molto disorientato con il codice di blender, avrei bisogno di qualche tutorial per capire le basi e piano piano fare qualcosa di utile, mi potresti aiutare?
Member
@NikkioBlend : https://developer.blender.org/docs/handbook/new_developers/ 🙂
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118524
No description provided.